--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.1",
+    "datatables.net-dt": "^1.13.6",
+    "jquery": "^3.7.0",
+    "mdb-ui-kit": "^6.4.1",
+    "mdbreact": "^5.2.0",
+    "mdbvue": "^6.7.4",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-d3-tree": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-treebeard": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
